<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#706767"
    tools:context=".Products">

    <Button
        android:id="@+id/buyButton4"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="108dp"
        android:drawableTop="@drawable/shopping_card"
        android:onClick="buyClicked"
        android:text="@string/buy_btn_no_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/product4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyButton3"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="176dp"
        android:drawableTop="@drawable/shopping_card"
        android:onClick="buyClicked"
        android:text="@string/buy_btn_no_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/product3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="276dp"
        android:text="@string/product2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyButton2"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="252dp"
        android:drawableTop="@drawable/shopping_card"
        android:onClick="buyClicked"
        android:text="@string/buy_btn_no_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="281dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="412dp"
        android:text="@string/shop_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="352dp"
        android:text="@string/product1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyButton1"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="328dp"
        android:drawableTop="@drawable/shopping_card"
        android:onClick="buyClicked"
        android:text="@string/buy_btn_no_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="32dp"
        android:onClick="aboutAppClicked"
        android:text="@string/about_application"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>